clean-ups
* sonarlint issues (Stream::toList)
* formatting: tabs -> spaces
* in Anstellung: made local list immutable