@@ -24,7 +24,6 @@ import static fxTools.TableViewTools.setPrefWidth;
 import java.math.BigDecimal;
 import java.time.YearMonth;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import abakus.ExplainedMoney;
 import abakus.Gruppe;
@@ -45,80 +44,80 @@ import javafx.scene.control.TableView;
 
 public class SerieTableController {
 
-	static class Kosten implements CsvCopyTable.CsvRow {
-		ObjectProperty<YearMonth> monat;
-		ObjectProperty<Gruppe> gruppe;
-		ObjectProperty<Stufe> stufe;
-		ObjectProperty<BigDecimal> umfang;
-		ObjectProperty<ExplainedMoney> betrag;
+    static class Kosten implements CsvCopyTable.CsvRow {
+        ObjectProperty<YearMonth> monat;
+        ObjectProperty<Gruppe> gruppe;
+        ObjectProperty<Stufe> stufe;
+        ObjectProperty<BigDecimal> umfang;
+        ObjectProperty<ExplainedMoney> betrag;
 
-		static Kosten of(final Monatskosten mKosten) {
-			final Kosten k = new Kosten();
-			k.monat = new SimpleObjectProperty<>(mKosten.stichtag);
-			k.gruppe = new SimpleObjectProperty<>(mKosten.stelle.gruppe);
-			k.stufe = new SimpleObjectProperty<>(mKosten.stelle.stufe);
-			k.umfang = new SimpleObjectProperty<>(mKosten.stelle.umfangPercent);
-			k.betrag = new SimpleObjectProperty<>(mKosten.kosten);
-			return k;
-		}
+        static Kosten of(final Monatskosten mKosten) {
+            final Kosten k = new Kosten();
+            k.monat = new SimpleObjectProperty<>(mKosten.stichtag);
+            k.gruppe = new SimpleObjectProperty<>(mKosten.stelle.gruppe);
+            k.stufe = new SimpleObjectProperty<>(mKosten.stelle.stufe);
+            k.umfang = new SimpleObjectProperty<>(mKosten.stelle.umfangPercent);
+            k.betrag = new SimpleObjectProperty<>(mKosten.kosten);
+            return k;
+        }
 
-		@Override
-		public String asCsv() {
-			return String.join("\t", monat.get().toString(), gruppe.get().toString(), stufe.get().toString(),
-					umfang.get().toString(), Converters.moneyConverter.toString(betrag.get().money()));
-		}
-	}
+        @Override
+        public String asCsv() {
+            return String.join("\t", monat.get().toString(), gruppe.get().toString(), stufe.get().toString(),
+                    umfang.get().toString(), Converters.moneyConverter.toString(betrag.get().money()));
+        }
+    }
 
-	@FXML
-	private TableView<Kosten> kostenTabelle;
+    @FXML
+    private TableView<Kosten> kostenTabelle;
 
-	@FXML
-	private TableColumn<Kosten, YearMonth> monatCol;
-	@FXML
-	private TableColumn<Kosten, Gruppe> gruppeCol;
-	@FXML
-	private TableColumn<Kosten, Stufe> stufeCol;
-	@FXML
-	private TableColumn<Kosten, BigDecimal> umfangCol;
-	@FXML
-	private TableColumn<Kosten, ExplainedMoney> kostenCol;
+    @FXML
+    private TableColumn<Kosten, YearMonth> monatCol;
+    @FXML
+    private TableColumn<Kosten, Gruppe> gruppeCol;
+    @FXML
+    private TableColumn<Kosten, Stufe> stufeCol;
+    @FXML
+    private TableColumn<Kosten, BigDecimal> umfangCol;
+    @FXML
+    private TableColumn<Kosten, ExplainedMoney> kostenCol;
 
-	private final ObservableList<Kosten> monatsKostenListe = FXCollections.observableArrayList();
+    private final ObservableList<Kosten> monatsKostenListe = FXCollections.observableArrayList();
 
-	@FXML
-	void initialize() {
-		initDragCellCol(monatCol, k -> k.monat, Converters.yearMonthConverter::toString);
-		initDragCellCol(gruppeCol, k -> k.gruppe, null);
-		initDragCellCol(stufeCol, k -> k.stufe, null);
-		initDragCellCol(umfangCol, k -> k.umfang, null);
-		initDragCellCol(kostenCol, k -> k.betrag, em -> Converters.moneyConverter.toString(em.money()));
-		TooltipCellDecorator.decorateColumn(kostenCol, em -> em != null ? em.explain() : null);
+    @FXML
+    void initialize() {
+        initDragCellCol(monatCol, k -> k.monat, Converters.yearMonthConverter::toString);
+        initDragCellCol(gruppeCol, k -> k.gruppe, null);
+        initDragCellCol(stufeCol, k -> k.stufe, null);
+        initDragCellCol(umfangCol, k -> k.umfang, null);
+        initDragCellCol(kostenCol, k -> k.betrag, em -> Converters.moneyConverter.toString(em.money()));
+        TooltipCellDecorator.decorateColumn(kostenCol, em -> em != null ? em.explain() : null);
 
-		setPrefWidth(kostenTabelle, monatCol, .2);
-		setPrefWidth(kostenTabelle, gruppeCol, .18);
-		setPrefWidth(kostenTabelle, stufeCol, .15);
-		setPrefWidth(kostenTabelle, umfangCol, .15);
+        setPrefWidth(kostenTabelle, monatCol, .2);
+        setPrefWidth(kostenTabelle, gruppeCol, .18);
+        setPrefWidth(kostenTabelle, stufeCol, .15);
+        setPrefWidth(kostenTabelle, umfangCol, .15);
 
-		final DoubleBinding colsWidth = monatCol.widthProperty().add(gruppeCol.widthProperty())//
-				.add(stufeCol.widthProperty())//
-				.add(umfangCol.widthProperty()).multiply(1.05);
-		kostenCol.prefWidthProperty().bind(kostenTabelle.widthProperty().subtract(colsWidth));
+        final DoubleBinding colsWidth = monatCol.widthProperty().add(gruppeCol.widthProperty())//
+                .add(stufeCol.widthProperty())//
+                .add(umfangCol.widthProperty()).multiply(1.05);
+        kostenCol.prefWidthProperty().bind(kostenTabelle.widthProperty().subtract(colsWidth));
 
-		kostenTabelle.setPlaceholder(new Label("Keine Daten"));
-		kostenTabelle.setItems(monatsKostenListe);
+        kostenTabelle.setPlaceholder(new Label("Keine Daten"));
+        kostenTabelle.setItems(monatsKostenListe);
 
-		kostenTabelle.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
-		CsvCopyTable.setCsvCopy(kostenTabelle);
-	}
+        kostenTabelle.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
+        CsvCopyTable.setCsvCopy(kostenTabelle);
+    }
 
-	/**
-	 * @param kostenListe the Monatskosten which to display
-	 */
-	void updateKosten(final List<Monatskosten> kostenListe) {
-		monatsKostenListe.setAll(kostenListe.stream().map(Kosten::of).collect(Collectors.toList()));
-	}
+    /**
+     * @param kostenListe the Monatskosten which to display
+     */
+    void updateKosten(final List<Monatskosten> kostenListe) {
+        monatsKostenListe.setAll(kostenListe.stream().map(Kosten::of).toList());
+    }
 
-	void clearKosten() {
-		monatsKostenListe.clear();
-	}
+    void clearKosten() {
+        monatsKostenListe.clear();
+    }
 }
